# CloudModeling

./: .gitmodules  LICENSE  README.md
CacheInspector/: CMakeLists.txt  Makefile  ci.cpp  config.h.in  config.mk  placeholder  util.hpp
CacheInspector/benchmarks/: CMakeLists.txt  cache_size.cpp  cache_size.hpp  generate-tracepoint-ids-header.sh  linux_perf_counters.cpp  linux_perf_counters.hpp  linux_perf_tracepoint_ids.hpp  rand_lat.cpp  rand_lat.hpp  rdtsc.hpp  rr_lat.c  seq_thp.cpp  seq_thp.hpp
CacheInspector/include/ci/: cache_info_shm.hpp  cache_size.hpp  ci.hpp  config.h.in  linux_perf_counters.hpp  rand_lat.hpp  rdtsc.hpp  schedule.hpp  seq_thp.hpp  util.hpp
CacheInspector/profile/: profile.py  profile.sh
CacheInspector/profile/legacy/: profile.sh  run.sh
CacheInspector/src/: cache_info_shm.cpp  cache_size.cpp  ci.cpp  ci.cpp.bak  example_app.cpp  generate-tracepoint-ids-header.sh  linux_perf_counters.cpp  rand_lat.cpp  sample.schedule  schedule.cpp  seq_thp.cpp
CacheInspector/src/arch/aarch64/: Makefile  rdtsc.c
CacheInspector/src/schedules/: cloud_default.schedule
application/: README.md  ceph-deploy1.sh  ceph-deploy2.sh
benchmark/: rr.tar.bz2
benchmark/fastcloudmodel/: Makefile  cm.cpp  util.hpp
benchmark/fastcloudmodel/benchmarks/: cache_size.cpp  cache_size.hpp  rand_lat.cpp  rand_lat.hpp  seq_thp.cpp  seq_thp.hpp
benchmark/fastcloudmodel/data/buffer_size/: bs  profile.sh
benchmark/fastcloudmodel/profile/: kde.py  profile.sh  rr_lat  run.sh
benchmark/fastcloudmodel/scripts/: measure.sh
benchmark/rr/: array.c  printx.c  rr_lat.c  run.sh  seq_read_write.c.bak  seq_write.c  seq_write.plot  simd.c  srw.sh  srwstride.s
cloudmodel/: cache_poisoner  get_cs.py  get_cs.sh  refresh_tags.sh  reinstall.sh  requirements.txt  setup.py  start_poison.sh  stop_poison.sh
cloudmodel/cloudmodel/: __init__.py  cpumem.py  factory.py  pack.py  util.py
cloudmodel/cloudmodel/res/cpumem/: benchmark.tgz  printx.c  rr_lat.c  seq_read_write.c  srw.sh
cloudmodel/cloudmodel/res/cpumem/pack/: buffer_size.lst  cpumeminfo.sh  msrw.sh  rr.sh  rr_lat  srw.sh  srwstride
legacy-benchmark/application/: README.md
legacy-benchmark/fastcloudmodel/data/batch_size/: bs.csv
legacy-benchmark/fastcloudmodel/data/buffer_size/: profile.sh
legacy-benchmark/fastcloudmodel/scripts/: plot.py  res
legacy-benchmark/rr/: Makefile  rand_read.c  rand_read.plot  rr_lat.c  runall.sh  srw.s
legacy-benchmark/stream/: Makefile  run.sh  stream.c
results/: inaccuracy.out  intro_exp.out  palette.py  plot.py  sensitivity.out
scripts/: clean.sh  collect.sh  deploy.cron  deploy.sh  getvmconfig.py  lab.sh  newinstance.sh  run.sh  stream.tar.bz2  vm.lst
scripts/plot/: getrl.py  getrr.py  getsrw.py  getstream.py
scripts/plot/histo/: cache_size.plot  l1cache.plot  l2cache.plot  l3cache.plot  mem.plot  plot.sh
scripts/plot/rl/: cfg  get2ddata.sh  plot-2d.sh  plot-contour.sh  plot.sh  rl.plot.template  rlp.plot.template  rlr.plot.template  rlr_bfsz.lst
scripts/plot/srw/: getsrw.sh  plot.sh  srw.amz.c3.large.plot  srw.amz.c4.large.plot  srw.amz.m3.medium.plot  srw.azure.ds1v2.plot  srw.azure.ds2v2.plot  srw.compute31.plot  srw.desktop.plot  srw.fractusvm.plot  srw.ggl.n1s1.plot  srw.ggl.n1s2.plot  srw.google.plot  srw.plot.tmp
scripts/plot/srw/data/: azure.ds1v2
website/: index.html  top.html
website/memory/: about.html  amz.c3.large.html  amz.c4.large.html  amz.m3.medium.html  azure.ds1v2.html  azure.ds2v2.html  desktop.html  fractus_bm.html  fractus_vm.html  ggl.n1s1.html  ggl.n1s2.html  histograms.html  left.html
website/memory/figs/: cache_size.eps  cahce_size.eps  l1cache.eps  l1cahce.eps  l2cache.eps  l2cahce.eps  l3cache.eps  l3cahce.eps  lat-azure.ds1-contour.eps  lat-azure.ds2-contour.eps  lat-c3.large-contour.eps  lat-c4.large-contour.eps  lat-compute31-contour.eps  lat-desktop-contour.eps  lat-fractusvm-contour.eps  lat-ggl.n1s1-contour.eps  lat-ggl.n1s2-contour.eps  lat-m3.medium-contour.eps  lat-t2.large-contour.eps  mem.eps  srw.amz.c3.large.eps  srw.amz.c4.large.eps  srw.amz.m3.medium.eps  srw.azure.ds1v2.eps  srw.azure.ds2v2.eps  srw.azure.eps  srw.compute31.eps  srw.desktop.eps  srw.fractusvm.eps  srw.ggl.n1s1.eps  srw.ggl.n1s2.eps  srw.google.eps
